    - Added mouse support (selection, cut/copy/paste).
    - All actions have keyboard shortcuts.

  * Various improvements to the ROM launcher:
    - Added wildcard support to the dialog filter
    - Added option to search subdirectories

  * Added static tooltips to some UI items.

  * Added dynamic tooltips to most debugger items.

  * Added sound to Time Machine playback.

  * Extended global hotkeys for input devices & ports settings.

  * Increased sample size for CDFJ+.

  * Fixed autofire bug for trackball controllers.

  * Fixed Stelladaptor/2600'daptor devices sometimes not being assigned
    correct default mappings.

  * Codebase now uses C++17 features, which means a minimum of gcc7
    or clang5 for Linux/Mac, and Visual Studio 2019 for Windows.

-Have fun!


6.3 to 6.4 (November 2, 2020)

  * Added basic (entire and single line only) text cut/copy and paste.

  * Added color parameters to 'Custom' palette.

  * Some improvements to AtariVox-USB adaptor functionality:
    - Made serial port used for an AtariVox-USB adaptor editable.
    - Autodetection of serial ports no longer messes up devices plugged
      into other serial ports.

  * Added CPU load stats to debugger.  Related to this, added debugger
    pseudo-registers '_ftimreadcycles' and '_fwsynccycles' to show the
    number of cycles since the start of frame under certain circumstances
    (see manual for more details).

  * Fixed bug with aspect correction and fullscreen mode; snapshots from
    such a mode are now pixel-exact.

  * Fixed a bug that caused CDF ROMs to crash on the Retron77 and reduced
    ARM emulation performance for CDF ROMs on other platforms.

  * Fixed crash with missing or incorrectly sized SaveKey data file, and
    with certain functions not working (erase pages, erase entire EEPROM).

  * Fixed Atari mouse autodetection.

  * Fixed bug in ROM launcher, with last ROM selected not being remembered
    when exiting and re-entering a directory.

