@@ -3190,6 +3190,16 @@
     </tr>
 
     <tr>
+      <td><pre>-userdir &lt;dir&gt;</pre></td>
+      <td>Set the path to save user files to.</td>
+    </tr>
+
+    <tr>
+      <td><pre>-saveuserdir &lt;0|1&gt;</pre></td>
+      <td>Update the user path when navigating in browser.</td>
+    </tr>
+
+    <tr>
       <td><pre>-maxres &lt;WxH&gt;</pre></td>
       <td>Useful for developers, this sets the maximum size of window that
       can be created, allowing to simulate testing on 'smaller' systems.</td>
